@@ -14,3 +14,6 @@
   * It is now possible to run JsDoc Toolkit from any directory.
   * Added support for inline {@link ...} tags.
   * Added support for the -H commandline option to allow for custom content handlers.
+  * Tag names @inherits and @scope changed to @borrows and @lends
+  * Combining @constructor in a doclet with @lends now supported
+  * Multiple @lend tags now supported
